Archive/bcbd465b6be81fe2b4a77767939fc12d-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp: In function 'int main()':
main.cpp:282:56: error: template argument 1 is invalid
     function_traits< (decltype(lamb)) >::arg0_type v = 5;
                                                        ^
main.cpp:285:18: error: 'v' was not declared in this scope
     std::cout << v << std::endl;
                  ^
